Fixed bug which caused multiple names to be sent